--- a/index.html
+++ b/index.html
@@ -1,59 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>CBI</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FAU-G</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <!-- ADD JQUERY HERE -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <select id="menu-menu">
-      <option value="faug">
-       NSG
-      </option>
-      <option value="faug">
-        BSF
-       </option>
-       <option value="faug">
-        Para Troops
-       </option>
-       <option value="faug">
-        ATS
-       </option>
+    <!-- Player Selector -->
+    <select name="" id="main-menu">
+      <option value="faug">NSG</option>
+      <option value="faug">BSF</option>
+      <option value="faug">Para Troops</option>
+      <option value="faug">ATS</option>
     </select>
+    <!-- Game Title -->
     <h1>fau-g</h1>
+    <!-- Game Menu -->
     <div id="menu">
-        <menu>
+      <menu>
         <ul>
           <li>
             <a href="#">
-              <span class="text">Mission Select</span>
+              <span class="text">Kill Pakistani Terriorists</span>
             </a>
           </li>
           <li>
-            <a href="#"><span class="text">Kill Pakastani Terrorist</span></a>
+            <a href="#">
+              <span class="text">Training</span>
+            </a>
           </li>
           <li>
-            <a href="#"><span class="text">Training</span></a>
+            <a href="#">
+              <span class="text">Backstory</span>
+            </a>
           </li>
           <li>
-            <a href="#"><span class="text">Backstory</span></a>
+            <a href="#">
+              <span class="text">Game Settings</span>
+            </a>
           </li>
           <li>
-            <a href="#"><span class="text">Game Settings</span></a>
+            <a href="#">
+              <span class="text">Controller Options</span>
+            </a>
           </li>
           <li>
-            <a href="#"><span class="text">Control Options</span></a>
+            <a href="#">
+              <span class="text">Hq Commands</span>
+            </a>
           </li>
           <li>
-            <a href="#"><span class="text">HQ Me     ssages</span></a>
-          </li>
-          <li>
-            <a href="#"><span class="text">Quit</span></a>
+            <a href="#">
+              <span class="text">Quit</span>
+            </a>
           </li>
         </ul>
       </menu>
+      <div class="player-model"></div>
+      <div class="hologram"></div>
     </div>
-
-    <script src="./app.js"></script>
+    <script src="./apps.js"></script>
   </body>
 </html>
